# glublm

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING-ART.md  CONTRIBUTING.md  README.md  SECURITY.md  SESSION_NOTES.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
companion/: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
data/: glublm_60k_report.txt  glublm_merged_v1_report.txt  glublm_pilot_10k_report.txt
data_gen/: __init__.py  agents.py  client.py  forbidden_tokens.txt  orchestrator.py  report.py  team_config.yaml  team_config_v2.yaml  team_config_v3.yaml  team_config_v4.yaml  team_config_v5.yaml  team_config_v51.yaml  team_config_v52.yaml  topics.yaml  topics_v2.yaml  topics_v3.yaml  topics_v4.yaml  topics_v5.yaml  topics_v51.yaml  topics_v52.yaml  validate.py
desk-pet/: app.js  index.html  manifest.json  style.css  sw.js  tokenizer.json
docs/: ANALYTICS.md  ARCHITECTURE.md  COMPARISONS.md  DATASET.md  TRAINING.md  bench_results.json  ideal_goldfish_responses.md  stress_test_companion.md  stress_test_edge_cases.md  stress_test_identity.md
eval/: baseline_v0.3.1.jsonl  baseline_v0.3.2.jsonl  baseline_v0.3.3.jsonl  prompts_v1.jsonl  report_v0.3.1.csv  report_v0.3.1.md  report_v0.3.2.csv  report_v0.3.2.md  report_v0.3.3.md  rubric_v1.md  scores_long_v0.3.3.csv  scores_pass1.jsonl  scores_pass2.jsonl  scores_v032_pass1.jsonl  scores_v032_pass2.jsonl  scores_v033_pass1.jsonl  scores_v033_pass2.jsonl
hf/: config.json  dataset_card.md  deprecated_18m_readme.md  model_card.md
notebooks/: train_colab.ipynb
scripts/: lighthouse.sh
space/: README.md  app.py  requirements.txt
tests/: conftest.py  generate_bpe_oracle.py  test_agents.py  test_attention.py  test_cli.py  test_client.py  test_config.py  test_dataset.py  test_end_to_end.py  test_export_onnx.py  test_forbidden.py  test_inference.py  test_model.py  test_orchestrator.py  test_rmsnorm.py  test_rope.py  test_swiglu.py  (+4 more)
(+116 files in other folders)
